[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies.mctp]
path = "../anchor/programs/mctp"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "=0.30.1"
solana-program = "=1.18.25"
wormhole-solana-consts = "0.3.0-alpha.0"
cfg-if = "1.0"
wormhole-solana-vaas = "0.3.0-alpha.1"
