[package]
name = "solayer-mayan-redeemer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solayer_mayan_redeemer"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi", "init-if-needed"] }
anchor-spl.workspace = true
solana-program.workspace = true
mctp = { workspace = true, features = ["no-entrypoint", "cpi"] }
cfg-if.workspace = true
